--- a/LoanApplication/thankyou.html
+++ b/LoanApplication/thankyou.html
@@ -23,12 +23,11 @@
             <div class="customerContain">
                 <div class="thanksData">
                     <p id="userName">Dear <em></em>,</p>
-                    <p id="userEmail">Thank you for your inquery. A 4 digit verification number has been sent to your email
-                        <strong></strong> please enter it the following box and submit for confiration
-                
+                    <p id="userEmail">Thank you for your inquiry. A 4 digit verification number has been sent to your email
+                        <strong></strong> please enter it in the following box and submit for confirmation.
                     </p>
                     <div class="optValidate">
-                        <input type="text" placeholder="Enter OTP" />
+                        <input type="text" placeholder="Enter OTP" maxlength="4"/>
                         <button>Validate</button> <i class="fa fa-check" aria-hidden="true"></i> <i class="fa fa-spinner fa-pulse"></i>
                     </div>
                     <div class="attemptCount">
