Amount section at  000 to add -and-  and ten place use

--- a/LoanApplication/thankyou.html
+++ b/LoanApplication/thankyou.html
@@ -31,8 +31,7 @@
                         </p>
                         <div class="optValidate">
                             <input type="text" placeholder="Enter OTP" maxlength="4" />
-                            <button>Validate</button> <i class="fa fa-check" aria-hidden="true"></i> <i
-                                class="fa fa-spinner fa-pulse"></i>
+                            <button>Validate</button> <i class="fa fa-check" aria-hidden="true"></i>
                         </div>
                         <div class="attemptCount">
                             <p>Please enter valid OTP <span></span> left</p>
