--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -814,6 +814,11 @@
 	</div>
 	</section>
 </footer>
+<!-- here is loader 1-->
+
+<div class="loader_bg">
+	<div class="loader"></div>
+</div>
 
 		<!--here model login and register -->
 		<div
@@ -1033,6 +1038,12 @@
 	
 
 </script>	
+<script>
+	// $(window).on("load",function(){
+	// 	$('.loader_bg').fadeOut("slow");
+	// })
+   
+</script>
 <script> 
  ScrollReveal({ 
             //   reset: true,
