--- a/Travel/index.html
+++ b/Travel/index.html
@@ -938,12 +938,12 @@
 	<div class="loader"></div>
 </div>
 
-	<script>
+	<!-- <script>
 		$(window).on("load",function(){
 			$('.loader_bg').fadeOut("slow");
 		})
 	   
-	</script>
+	</script> -->
 <script>
     window.addEventListener("scroll",function(){
         var nav = document.querySelector("nav");
