--- a/LoanApplication/index.html
+++ b/LoanApplication/index.html
@@ -16,11 +16,11 @@
 
 <body>
     <div class="container">
-        <div class="loanApp">
+        <div class="loan">
             <div class="loanHeading">
                 <h1>Loan Application</h1>
             </div>
-            <div class="loan">
+            <div class="loanData">
 
                 <form action="" method="get" id="loanForm" name="loanForm">
                     <div class="inp">
@@ -68,10 +68,10 @@
                     <div class="inp">
                         <div class="label"><label for="amount">Amount</label></div>
                         <div class="form-input">
-                            <input type="text" name="amount" id="amount" pattern="[0-9]+" maxlength="9">
+                            <input type="text" name="amount" id="amount" pattern="[0-9]+" maxlength="9"  oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
                         </div>
                     </div>
-                    <div class="amtError" style="width: 65%; color:rgb(182, 10, 10);">
+                    <div class="inputError amtError" style="width: 65%; color:rgb(182, 10, 10);">
                         <span>Please enter number</span>
                     </div>
                     <div class="amountShow">
@@ -89,16 +89,16 @@
                             </div>
                             <div class="equalTo">=</div>
                             <div class="form-input check">
-                                <input type="text" name="vali" id="validate" value="0">
+                                <input type="text" name="vali" id="validate" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
                             </div>
 
                         </div>
-                        <div class="inp error">
+                        <div class="inp inputError error">
                             <div class="wrong">
                                 <i class="fa fa-exclamation-circle" aria-hidden="true"></i> <span> Wrong Answer
                                     ...</span>
                             </div>
-                            <div class="right">
+                            <div class="right inputError">
                                 <i class="fa fa-check-circle" aria-hidden="true"></i> <span>Correct ...</span>
                             </div>
 
