--- a/LoanApplication/thankyou.html
+++ b/LoanApplication/thankyou.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Application</title>
+    <title>Thank You Page</title>
 
     <script src="https://kit.fontawesome.com/162dba6519.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/13f391ae93.js" crossorigin="anonymous"></script>
